# CoinToss

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  preferences.json
include/: Callbacks.h  Camera.h  Data.h  DebugDraw.h  DeltaTime.h  Framebuffer.h  Gui.h  Model.h  MotionState.h  Physics.h  Plane.h  Shader.h  Singleton.h  System.h  Utils.h  WindowParameters.h
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
models/coin/: PirateCoin.mtl
models/table/: RoundTable.mtl
shaders/: debug_draw.frag  debug_draw.vert  depth_map_to_color_map.frag  depth_map_to_color_map.vert  light_depth.vert  object.frag  object.vert
src/: Callbacks.cpp  Camera.cpp  Data.cpp  DebugDraw.cpp  DeltaTime.cpp  Framebuffer.cpp  Gui.cpp  Model.cpp  MotionState.cpp  Plane.cpp  Shader.cpp  Utils.cpp  WindowParameters.cpp  main.cpp
